--- a/index.html
+++ b/index.html
@@ -5,13 +5,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="shortcut icon" type="image" href="./img/bayc-footer.webp" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
     <title>Hassan</title>
 </head>
 
 <body>
-    <h1> Hassan </h1>
+
+    <nav>
+        <img src="./img/bayc-logo-z.webp" alt="" width="200px">
+        <div>
+            <div>
+                <ul >
+                    <li>BUY AN APE</li>
+                    <li>ROADMAP</li>
+                    <li>TEAM</li>
+                    <li>GALLERY</li>
+                    <li>PROVENANCE</li>
+                    <li>MEMBERS</li>
+                </ul>
+            </div>
+
+            <div class="icons">
+                <i><img src="./img/youtube.svg" alt=""></i>
+                <i><img src="./img/instagram.svg" alt=""></i>
+                <i><img src="./img/icons8-discord.svg" alt="" width="30px"></i>
+                <i><img src="./img/twitter.svg" alt=""></i>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            <!-- <h1> Hass </h1>
     <p>Under construction </p>
-    <a href="https://instagram.com/nft_verzs?utm_medium=copy_link">Instagram</a>
+    <a href="https://instagram.com/nft_verzs?utm_medium=copy_link">Instagram</a> -->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+                crossorigin="anonymous"></script>
 </body>
 
 </html>
