--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" type="image" href="./img/bayc-footer.webp" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
-    <title>Hassan</title>
+<!-- favicon --> <link rel="shortcut icon" type="image" href="./img/favicon.png" />
+<!-- bootstrap -->  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+                 integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<!-- google font -->       <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,200;1,500;1,800;1,900&display=swap" rel="stylesheet">
+   
+        <link rel="stylesheet" href="./style.css">
+        <title>BAYC</title>
 </head>
 
 <body>
 
     <nav>
         <img src="./img/bayc-logo-z.webp" alt="" width="200px">
-        <div>
+        <div class="navlinks">
             <div>
-                <ul >
+                <ul>
                     <li>BUY AN APE</li>
                     <li>ROADMAP</li>
                     <li>TEAM</li>
@@ -34,7 +38,22 @@
                 <i><img src="./img/instagram.svg" alt=""></i>
                 <i><img src="./img/icons8-discord.svg" alt="" width="30px"></i>
                 <i><img src="./img/twitter.svg" alt=""></i>
+
             </div>
+        </div>
+    </nav>
+<img class="coverimg" src="./img/bayc-mutant-hero.webp" alt="" width="930px">
+
+<div class="welcomediv">
+    <div class="welcometext">
+        <h1>WELCOME TO THE<br>BORED APE YACHT CLUB</h1>
+        <p>BAYC is a collection of 10,000 Bored Ape NFTs—unique digital collectibles living on the Ethereum blockchain. Your Bored Ape doubles as your Yacht Club membership card, and grants access to members-only benefits, the first of which is access to THE BATHROOM, a collaborative graffiti board. Future areas and perks can be unlocked by the community through roadmap activation.</p>
+    </div>
+    <div class="fourimggrid">
+        <div class="twoimgrow"><img src="./img/ape1.webp" alt="" width="150px"> <img src="./img/ape2.webp" alt="" width="150px"></div>
+        <div class="twoimgrow"><img src="./img/ape3.webp" alt="" width="150px"> <img src="./img/ape4.webp" alt="" width="150px"></div>
+    </div>
+</div>
 
 
 
@@ -47,18 +66,12 @@
 
 
 
-
-
-
-
-
-
-            <!-- <h1> Hass </h1>
+    <!-- <h1> Hass </h1>
     <p>Under construction </p>
     <a href="https://instagram.com/nft_verzs?utm_medium=copy_link">Instagram</a> -->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
