--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- favicon --> <link rel="shortcut icon" type="image" href="./img/favicon.png" />
-<!-- bootstrap -->  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-                 integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<!-- google font -->       <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,200;1,500;1,800;1,900&display=swap" rel="stylesheet">
-   
-        <link rel="stylesheet" href="./style.css">
-        <title>BAYC</title>
+    <!-- favicon -->
+    <link rel="shortcut icon" type="image" href="./img/favicon.png" />
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,200;1,500;1,800;1,900&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="./style.css">
+    <title>BAYC</title>
 </head>
 
 <body>
@@ -42,18 +47,116 @@
             </div>
         </div>
     </nav>
-<img class="coverimg" src="./img/bayc-mutant-hero.webp" alt="" width="930px">
+    <img class="coverimg" src="./img/bayc-mutant-hero.webp" alt="" width="930px">
 
-<div class="welcomediv">
-    <div class="welcometext">
-        <h1>WELCOME TO THE<br>BORED APE YACHT CLUB</h1>
-        <p>BAYC is a collection of 10,000 Bored Ape NFTs—unique digital collectibles living on the Ethereum blockchain. Your Bored Ape doubles as your Yacht Club membership card, and grants access to members-only benefits, the first of which is access to THE BATHROOM, a collaborative graffiti board. Future areas and perks can be unlocked by the community through roadmap activation.</p>
+    <div class="section1">
+        <div class="section1text">
+            <h1>WELCOME TO THE<br>BORED APE YACHT CLUB</h1>
+            <p>BAYC is a collection of 10,000 Bored Ape NFTs—unique digital collectibles living on the Ethereum
+                blockchain. Your Bored Ape doubles as your Yacht Club membership card, and grants access to members-only
+                benefits, the first of which is access to THE BATHROOM, a collaborative graffiti board. Future areas and
+                perks can be unlocked by the community through roadmap activation.</p>
+        </div>
+        <div class="fourimggrid">
+            <div class="twoimgrow"><img src="./img/ape1.webp" alt="" width="150px"> <img src="./img/ape2.webp" alt=""
+                    width="150px"></div>
+            <div class="twoimgrow"><img src="./img/ape3.webp" alt="" width="150px"> <img src="./img/ape4.webp" alt=""
+                    width="150px"></div>
+        </div>
     </div>
-    <div class="fourimggrid">
-        <div class="twoimgrow"><img src="./img/ape1.webp" alt="" width="150px"> <img src="./img/ape2.webp" alt="" width="150px"></div>
-        <div class="twoimgrow"><img src="./img/ape3.webp" alt="" width="150px"> <img src="./img/ape4.webp" alt="" width="150px"></div>
+    <div class="section2">
+        <div class="section2text">
+            <h2>FAIR DISTRIBUTION </h2>
+            <h5>(BONDING CURVES ARE A PONZI)</h5>
+            <p>There are no bonding curves here. Buying a Bored Ape costs 0.08 ETH. There are no price tiers; BAYC
+                membership costs the same for everyone.</p>
+        </div>
+        <div class="note">
+            <p>Note: Thirty apes are being withheld from the sale. These will be used for giveaways, puzzle rewards—and
+                for the creators' BAYC memberships.</p>
+        </div>
     </div>
-</div>
+
+    <div class="yellowcontainer">
+        <div>
+            <h2>BUY AN APE</h2>
+        </div>
+        <div>
+            <p>The initial sale has sold out. To get your Bored Ape, check out the collection on OpenSea.</p>
+        </div>
+        <div> <button>BUY AN APE ON OPENSEA</button> </div>
+    </div>
+
+    <div class="section4">
+        <div class="section4text">
+            <h1>THE SPECS</h1>
+            <p>Each Bored Ape is unique and programmatically generated from over 170 possible traits, including
+                expression, headwear, clothing, and more. All apes are dope, but some are rarer than others.<br><br>The
+                apes
+                are stored as ERC-721 tokens on the Ethereum blockchain and hosted on IPFS. (<a href="#">See Record and
+                    Proof.</a>) Purchasing an ape costs 0.08 ETH.<br><br>To access members-only areas such as <a
+                    href="#">THE BATHROOM</a>, Apeholders will need to be signed into their Metamask Wallet.</p>
+        </div>
+        <div class="gif"> <img src="./img/mystery-ape.webp" alt="" width="284px"></div>
+    </div>
+
+
+    <div class="section5">
+        <div class="section5text">
+            <h1>WELCOME TO THE CLUB</h1>
+            <p>When you buy a Bored Ape, you’re not simply buying an avatar or a provably-rare piece of art. You are
+                gaining membership access to a club whose benefits and offerings will increase over time. Your Bored Ape
+                can serve as your digital identity, and open digital doors for you.</p>
+        </div>
+        <div class="section5icons">
+            <figure>
+                <img src="./img/icon1.webp" alt="" width="100px">
+                <figcaption>10,000 Provably-rare Bored Ape tokens</figcaption>
+            </figure>
+            <figure>
+                <img src="./img/icon2.webp" alt="" width="100px">
+                <figcaption>Fair Launch, fair distribution: All apes cost 0.08 ETH</figcaption>
+            </figure>
+            <figure>
+                <img src="./img/icon3.webp" alt="" width="100px">
+                <figcaption>Ownership and commercial usage rights given to the consumer over their NFT</figcaption>
+            </figure>
+            <figure>
+                <img src="./img/icon4.webp" alt="" width="100px">
+                <figcaption>The Bathroom: A member's-only graffiti board</figcaption>
+            </figure>
+            <figure>
+                <img src="./img/icon5.webp" alt="" width="100px">
+                <figcaption>Gain additional benefits through roadmap activations</figcaption>
+            </figure>
+
+
+
+        </div>
+    </div>
+
+    <div class="section6">
+        <div class="section6text">
+            <h1>THE BATHROOM</h1>
+            <p>The BAYC Bathroom will become operational once the presale period is over. It contains a canvas
+                accessible only to wallets containing at least one ape. Like any good dive bar bathroom, this is the
+                place to draw, scrawl, or write expletives.<br>Each ape-holder will be able to paint a pixel on the
+                bathroom wall every fifteen minutes. Think of it as a collaborative art experiment for the cryptosphere.
+                A members-only canvas for the discerning minds of crypto twitter.<br>We're pretty sure it's going to be
+                full of dicks.</p>
+        </div>
+        <div><img class="toilet" src="./img/toilet.png" alt="" width="162.7px"></div>
+    </div>
+
+
+
+
+
+
+
+
+
+
 
 
 
