--- a/index.html
+++ b/index.html
@@ -129,9 +129,6 @@
                 <img src="./img/icon5.webp" alt="" width="100px">
                 <figcaption>Gain additional benefits through roadmap activations</figcaption>
             </figure>
-
-
-
         </div>
     </div>
 
@@ -148,7 +145,9 @@
         <div><img class="toilet" src="./img/toilet.png" alt="" width="162.7px"></div>
     </div>
 
-
+<div class="section7">
+    <h1>ROADMAP ACTIVATIONS</h1><p>We’re in this for the long haul.<br><br>We’ve set up some goalposts for ourselves. Once we hit a target sell through percentage, we will begin to work on realizing the stated goal.</p>
+</div>
 
 
 
