--- a/index.html
+++ b/index.html
@@ -147,12 +147,57 @@
 
 <div class="section7">
     <h1>ROADMAP ACTIVATIONS</h1><p>We’re in this for the long haul.<br><br>We’ve set up some goalposts for ourselves. Once we hit a target sell through percentage, we will begin to work on realizing the stated goal.</p>
+<div class="section7table">
+    <ul class="yellopercent">
+        <li>10% <br><br></li>
+        <li>20% <br><br></li>
+        <li>40% <br><br></li>
+        <li>60% <br><br></li>
+        <li>80% <br><br></li>
+        <li>90% <br><br></li>
+        <li>100% <br><br></li>
+    </ul>
+    <ul class="strikethroughtext">
+        <li>We pay back our moms.<br><br></li>
+        <li>We release the Caged Apes. 5 Caged Apes (tokens held back from the sale) are airdropped to random Apeholders.</li>
+        <li>BAYC gets its own YouTube channel, BAYC LoFi Radio - Beats to Ape into Shitcoins To.</li>
+        <li> Member-Exclusive BAYC Merch Store gets unlocked, featuring Limited Edition tees, hoodies, and other goodies.</li>
+        <li>The clubhouse image becomes interactive and the Mysterious Note becomes legible, beginning a treasure hunt. The first to solve the mystery will be rewarded 5 ETH and a Bored Ape.</li>
+        <li>The Bored Ape liquidity pool is initiated.</li>
+        <li>The Mutant Ape (NFT Breeding) Arcade Machine gets ﬁxed. And we cook up new ways to ape with our friends.</li>
+    </ul>
+    <img src="./img/shirt.webp" alt="" width="319px">
+</div>
+
+</div>
+
+<div class="section8">
+    <div class="section8text"><h2>COMMUNITY TOOLS</h2><p>Here are some helpful tools created by the Bored Ape Yacht Club community. Please note that these are unofficial in nature. Every assignment of an ape's overall value or rarity is inherently subjective.</p></div>
+    <div class="section8button">  <a href="#">NFTEP.IO</a> <a href="#">RARITY.TOOLS</a>       </div>
+</div>
+
+
+<div class="section9">
+<div>
+ <div class="section9text">
+<h2>THE TEAM</h2>
+<p class="section9para">BAYC was created by four friends who set out to make some dope apes, test our skills, and try to build something (ridiculous).</p>
+<p><span>GARGAMEL. </span>STARCRAFT OBSESSED. EATS SMURFS.</p>
+<p><span>GORDON GONER. </span>REFORMED LEVERAGE ADDICT.</p>
+<p><span>EMPEROR TOMATO KETCHUP. </span>SPENT ALL THEIR MONEY ON FIRST PRESSES AND PET-NAT.</p>
+<p><span>NO SASS. </span>HERE FOR THE APES. NOT FOR THE SASS.</p>
+ </div>
+
+
+
+
+
 </div>
 
 
 
-
-
+    <div></div>
+</div>
 
 
 
