--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         </div>
     </nav>
     <img class="coverimg" src="./img/bayc-mutant-hero.webp" alt="" width="930px">
-
-    <div class="section1">
+<div class="allmargin">
+    <div class="section1"> <!-- margin later with responsive -->
         <div class="section1text">
             <h1>WELCOME TO THE<br>BORED APE YACHT CLUB</h1>
             <p>BAYC is a collection of 10,000 Bored Ape NFTs—unique digital collectibles living on the Ethereum
@@ -97,7 +97,7 @@
         </div>
     </div>
 
-    <div class="yellowcontainer">
+    <div class="yellowcontainer"> <!-- ye yellow container wali div ky andar div kiyu di hy alignment theek karni hy -->
         <div>
             <h2>BUY AN APE</h2>
         </div>
@@ -117,7 +117,7 @@
                     Proof.</a>) Purchasing an ape costs 0.08 ETH.<br><br>To access members-only areas such as <a
                     href="#">THE BATHROOM</a>, Apeholders will need to be signed into their Metamask Wallet.</p>
         </div>
-        <div class="gif"> <img src="./img/mystery-ape.webp" alt="" width="284px"></div>
+        <div class="gif"> <img src="./img/mystery-ape.webp" alt="" width="290px"></div>
     </div>
 
 
@@ -232,7 +232,7 @@
         
         <div><p class="verified">VERIFIED SMART CONTRACT ADDRESS: <a href="#">0xBC4CA0EdA7647A8aB7C2061c2E118A18a936f13D</a> </p></div>
     </div>
-
+</div>
 <div class="footer">
 <div class="form">
 <p>GET ON THE LIST</p><br>
