--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!-- favicon -->
     <link rel="shortcut icon" type="image" href="./img/favicon.png" />
     <!-- bootstrap -->
@@ -19,14 +17,11 @@
         rel="stylesheet">
     <!-- fontawsome icon -->
     <script src="https://kit.fontawesome.com/b19bd5af82.js" crossorigin="anonymous"></script>
-
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./mobileStyle.css" media="(max-device-width:450px)">
     <title>BAYC</title>
 </head>
-
 <body>
-
     <nav>
         <img src="./img/bayc-logo-z.webp" alt="" width="200px">
         <div class="navlinks">
@@ -74,12 +69,7 @@
             <!-- margin later with responsive -->
             <div class="section1text">
                 <h1>WELCOME TO THE<br>BORED APE YACHT CLUB</h1>
-                <p>BAYC is a collection of 10,000 Bored Ape NFTs—unique digital collectibles living on the Ethereum
-                    blockchain. Your Bored Ape doubles as your Yacht Club membership card, and grants access to
-                    members-only
-                    benefits, the first of which is access to THE BATHROOM, a collaborative graffiti board. Future areas
-                    and
-                    perks can be unlocked by the community through roadmap activation.</p>
+                <p>BAYC is a collection of 10,000 Bored Ape NFTs—unique digital collectibles living on the Ethereum blockchain. Your Bored Ape doubles as your Yacht Club membership card, and grants access to members-only  benefits, the first of which is access to THE BATHROOM, a collaborative graffiti board. Future areas and  perks can be unlocked by the community through roadmap activation.</p>
             </div>
             <div class="fourimggrid">
                 <div class="twoimgrow">
@@ -96,13 +86,10 @@
             <div class="section2text">
                 <h2>FAIR DISTRIBUTION </h2>
                 <h5>(BONDING CURVES ARE A PONZI)</h5>
-                <p>There are no bonding curves here. Buying a Bored Ape costs 0.08 ETH. There are no price tiers; BAYC
-                    membership costs the same for everyone.</p>
+                <p>There are no bonding curves here. Buying a Bored Ape costs 0.08 ETH. There are no price tiers; BAYC membership costs the same for everyone.</p>
             </div>
             <div class="note">
-                <p>Note: Thirty apes are being withheld from the sale. These will be used for giveaways, puzzle
-                    rewards—and
-                    for the creators' BAYC memberships.</p>
+                <p>Note: Thirty apes are being withheld from the sale. These will be used for giveaways, puzzle rewards—and for the creators' BAYC memberships.</p>
             </div>
         </div>
 
@@ -118,7 +105,6 @@
             <button>BUY AN APE ON OPENSEA</button>
             <!-- </div> -->
         </div>
-
         <div class="section4">
             <div class="section4text">
                 <h1>THE SPECS</h1>
@@ -133,8 +119,7 @@
             </div>
             <div class="gif"> <img src="./img/mystery-ape.webp" alt="" width="290px"></div>
         </div>
-
-
+        
         <div class="section5">
             <div class="section5text">
                 <h1>WELCOME TO THE CLUB</h1>
@@ -201,35 +186,23 @@
                     </ul>
                     <ul class="strikethroughtext">
                         <li>We pay back our moms.<br><br></li>
-                        <li>We release the Caged Apes. 5 Caged Apes (tokens held back from the sale) are airdropped to
-                            random
-                            Apeholders.</li>
+                        <li>We release the Caged Apes. 5 Caged Apes (tokens held back from the sale) are airdropped to random Apeholders.</li>
                         <li>BAYC gets its own YouTube channel, BAYC LoFi Radio - Beats to Ape into Shitcoins To.</li>
-                        <li> Member-Exclusive BAYC Merch Store gets unlocked, featuring Limited Edition tees, hoodies,
-                            and
-                            other
-                            goodies.</li>
-                        <li>The clubhouse image becomes interactive and the Mysterious Note becomes legible, beginning a
-                            treasure hunt. The first to solve the mystery will be rewarded 5 ETH and a Bored Ape.</li>
+                        <li> Member-Exclusive BAYC Merch Store gets unlocked, featuring Limited Edition tees, hoodies, and other goodies.</li>
+                        <li>The clubhouse image becomes interactive and the Mysterious Note becomes legible, beginning a treasure hunt. The first to solve the mystery will be rewarded 5 ETH and a Bored Ape.</li>
                         <li>The Bored Ape liquidity pool is initiated.</li>
-                        <li>The Mutant Ape (NFT Breeding) Arcade Machine gets ﬁxed. And we cook up new ways to ape with
-                            our
-                            friends.</li>
+                        <li>The Mutant Ape (NFT Breeding) Arcade Machine gets ﬁxed. And we cook up new ways to ape with our friends.</li>
                     </ul>
                 </div>
                 <div class="shirtdiv"> <img src="./img/shirt.webp" alt="" width="319px"></div>
             </div>
-
         </div>
 
         <div class="section8">
             <div class="section8text">
                 <h2>COMMUNITY TOOLS</h2>
-                <p>Here are some helpful tools created by the Bored Ape Yacht Club community. Please note that these are
-                    unofficial in nature. Every assignment of an ape's overall value or rarity is inherently subjective.
-                </p>
+                <p>Here are some helpful tools created by the Bored Ape Yacht Club community. Please note that these are unofficial in nature. Every assignment of an ape's overall value or rarity is inherently subjective.</p>
             </div>
-
             <div class="section8button">
                 <a href="#"><button>NFTEP.IO</button></a>
                 <a href="#"><button>RARITY.TOOLS</button></a>
@@ -240,25 +213,19 @@
             <div class="sec9flex">
                 <div class="section9text">
                     <h2>THE TEAM</h2>
-                    <p class="section9para">BAYC was created by four friends who set out to make some dope apes, test
-                        our
-                        skills, and try to build something (ridiculous).</p>
+                    <p class="section9para">BAYC was created by four friends who set out to make some dope apes, test our skills, and try to build something (ridiculous).</p>
                     <p><span>GARGAMEL. </span>STARCRAFT OBSESSED. EATS SMURFS.</p>
                     <p><span>GORDON GONER. </span>REFORMED LEVERAGE ADDICT.</p>
                     <p><span>EMPEROR TOMATO KETCHUP. </span>SPENT ALL THEIR MONEY ON FIRST PRESSES AND PET-NAT.</p>
                     <p><span>NO SASS. </span>HERE FOR THE APES. NOT FOR THE SASS.</p>
                 </div>
                 <div class="fourimggridreal">
-
                     <img src="./img/garga.webp" alt="" width="150px">
                     <img src="./img/gordy.webp" alt="" width="150px">
                     <img src="./img/tomato.webp" alt="" width="150px">
                     <img src="./img/sass.webp" alt="" width="150px">
                 </div>
-
-
             </div>
-
             <div>
                 <p class="verified">VERIFIED SMART CONTRACT ADDRESS: <a
                         href="#">0xBC4CA0EdA7647A8aB7C2061c2E118A18a936f13D</a> </p>
@@ -268,22 +235,14 @@
     <div class="footer">
         <div class="form">
             <p>GET ON THE LIST</p><br>
-
             <form class="email" method="post" name="form"><input type="email" placeholder="Email Address" name="EMAIL"
                     required="" value="">
                 <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text"
                         name="b_c979ffabc41007fd79ffe121b_b785550a9e" tabindex="-1" value=""></div><button
                     name="subscribe" class="email-submit" type="submit">→</button>
             </form>
-
-
-
         </div>
-
-
         <img src="./img/bayc-footer.webp" alt="" width="170px">
-
-
         <div>
             <div class="iconscontainer">
                 <a href="https://www.youtube.com/channel/UCUTMs216kmgY9lOgBFDckAQ"><i><svg class="icon"
@@ -313,24 +272,13 @@
             <p class="r">© 2022 Shehzad Labs LTD</p><br>
             <a href="#" class="terms">BAYC Terms & Conditions</a><br>
             <a href="#" class="terms">MAYC Terms & Conditions</a><br>
-
-        </div>
+       </div>
     </div>
-
     <div class="yellowend"></div>
-
-
-
-
-
-
-
-    <!-- <h1> Hass </h1>
     <p>Under construction </p>
     <a href="https://instagram.com/nft_verzs?utm_medium=copy_link">Instagram</a> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
